--- a/donate.html
+++ b/donate.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Donate – GreenRoots</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="donate.css">
 </head>
 <body>
   <header>
